fixed socials sizing, hopefully fixed background issue on mobile

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ body {
     overflow-y: visible;
     margin-top: 9vh;
     height: 90.8vh;
-    background-color: rgb(23, 39, 45);
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)),
         url("assets/background.gif");
     background-repeat: no-repeat;
@@ -919,6 +918,7 @@ cursor width is 1/2 border width */
 #contact.portrait .resume,
 #contact.portrait .reportBug {
     height: 20vw;
+    min-height: 23vw;
 }
 
 
